# schemacrawler-ai-sqlserver-perf

./: .dockerignore  .env.example  .gitignore  COLUMN_STATISTICS_TOOL.md  DATABASE_MODULE.md  Dockerfile  README.md  mcpserver.yaml  pyproject.toml  sql-server-performance.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  copilot-setup-steps.yml  docker.yml
schemacrawler-ai-sqlserver-perf/: main.py
schemacrawler_ai/: __init__.py  main.py
schemacrawler_ai/tools/: __init__.py  hello_world.py
schemacrawler_ai_sqlserver_perf/: main.py
schemacrawler_ai_sqlserver_perf/database/: __init__.py  config.py  connection.py  sql_executor.py
schemacrawler_ai_sqlserver_perf/tools/: __init__.py  column_statistics_tool.py  database_connection_tool.py  performance_monitoring_tool.py  top_queries_tool.py  version_tool.py
tests/: __init__.py  test_column_statistics_tool.py  test_database_config.py  test_database_connection.py  test_database_connection_tool.py  test_database_connection_tool_sql_executor.py  test_hello_world.py  test_main.py  test_performance_monitoring_tool.py  test_sql_executor.py  test_top_queries_tool.py  test_version_tool.py
