[tool.poetry]
name = "schemacrawler-ai-sqlserver-perf"
version = "0.1.0"
description = "SchemaCrawler AI MCP Server for SQL Server Performance Analysis"
authors = ["Sualeh Fatehi <sualeh@hotmail.com>"]
readme = "README.md"
packages = [{include = "schemacrawler_ai_sqlserver_perf"}]

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^2.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
schemacrawler-ai-server = "schemacrawler-ai-sqlserver-perf.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=schemacrawler_ai --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
