[project]
name = "schemacrawler_ai_sqlserver_perf"
version = "0.1.0"
description = "SchemaCrawler AI MCP Server for SQL Server Performance Analysis"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pyodbc>=5.0.0",
]

[project.scripts]
schemacrawler_ai_sqlserver_perf = "schemacrawler_ai_sqlserver_perf.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
